--- a/project.tex
+++ b/project.tex
@@ -57,15 +57,15 @@ Istniej\k{a} teorie, wed\l{}ug kt\'{o}rych przej\'{s}cie obiektu przez horyzont 
 Z matematycznego punktu widzenia fakt ten sprowadza si\k{e} do stwierdzenia, \.{z}e do opisu czarnej dziury wystarczy poda\'{c} jej mas\k{e}, \l{}adunek oraz moment p\k{e}du. Dla poszczeg\'{o}lnych kombinacji tych trzech warto\'{s}ci sformu\l{}owano nast\k{e}puj\k{a}ce rozwi\k{a}zania r\'{o}wna\'{n} opisuj\k{a}cych czarn\k{a} dziur\k{e}:
  
 \begin{enumerate}
-\item Schwarzschilda \textendash{} tylko masa niezerowa,
-\item Reissnera-Nordstr\"{o}ma \textendash{} \l{}adunek, masa niezerowa, brak momentu p\k{e}du,
-\item Kerra \textendash{} masa i moment p\k{e}du niezerowy, brak \l{}adunku,
-\item Kerra-Newmanna \textendash{} \l{}adunek, masa, moment p\k{e}du niezerowe.
+	\item Schwarzschilda \textendash{} tylko masa niezerowa,
+	\item Reissnera-Nordstr\"{o}ma \textendash{} \l{}adunek, masa niezerowa, brak 		momentu p\k{e}du,
+	\item Kerra \textendash{} masa i moment p\k{e}du niezerowy, brak \l{}adunku,
+	\item Kerra-Newmanna \textendash{} \l{}adunek, masa, moment p\k{e}du 				niezerowe.
 \end{enumerate}
 
 \subsection{Klasyfikacja czarnych dziur}
 
-\begin{table}
+\begin{table}[h]
 \caption{\textbf{Black hole classifications}}
 \begin{center}
 \renewcommand{\arraystretch}{2}
@@ -84,6 +84,7 @@ Micro black hole & up to $M_{moon}$ & up to $0.1$ mm \\
 \end{tabular}
 \end{center}
 \end{table}
+\newpage
  
 
 \end{document}
