--- a/project.tex
+++ b/project.tex
@@ -6,18 +6,20 @@
 \graphicspath{ {./images/} }
 \title{Czarna dziura}
 \author{Piotr Jadczak}
+\date{28 grudnia 2019 r.}
 
 \begin{document}
 \maketitle
 \newpage
 \section{Opis}
 
-\textbf{Czarna dziura} \textendash{} obszar czasoprzestrzeni, kt\'{o}rego z uwagi na wp\l{}yw grawitacji, nic (\l{}\k{a}cznie ze \'{s}wiat\l{}em) nie mo\.{z}e opu\'{s}ci\'{c}. Zgodnie z og\'{o}ln\k{a} teori\k{a} wzgl\k{e}dno\'{s}ci, do jej powstania niezb\k{e}dne jest nagromadzenie dostatecznie du\.{z}ej masy w odpowiednio ma\l{}ej obj\k{e}to\'{s}ci. Czarn\k{a} dziur\k{e} otacza matematycznie zdefiniowana powierzchnia nazywana horyzontem zdarze\'{n}, kt\'{o}ra wyznacza granic\k{e} bez powrotu. Nazywa si\k{e} j\k{a} ,,czarn\k{a}\textquotedblright{}, poniewa\.{z} poch\l{}ania ca\l{}kowicie \'{s}wiat\l{}o trafiaj\k{a}ce w horyzont, nie odbijaj\k{a}c niczego, zupe\l{}nie jak cia\l{}o doskonale czarne w termodynamice. Mechanika kwantowa przewiduje, \.{z}e czarne dziury emituj\k{a} promieniowanie jak cia\l{}o doskonale czarne o niezerowej temperaturze. Temperatura ta jest odwrotnie proporcjonalna do masy czarnej dziury, co sprawia, \.{z}e bardzo trudno je zaobserwowa\'{c} w wypadku czarnych dziur o masie gwiazdowej b\k{a}d\'{z} wi\k{e}kszych.
+\textbf{Czarna dziura} \textendash{} obszar czasoprzestrzeni, kt\'{o}rego z uwagi na wp\l{}yw grawitacji, nic (\l{}\k{a}cznie ze \'{s}wiat\l{}em) nie mo\.{z}e opu\'{s}ci\'{c}\footnote[1]{Wald 1984 , s. 299–300.}. Zgodnie z og\'{o}ln\k{a} teori\k{a} wzgl\k{e}dno\'{s}ci, do jej powstania niezb\k{e}dne jest nagromadzenie dostatecznie du\.{z}ej masy w odpowiednio ma\l{}ej obj\k{e}to\'{s}ci. Czarn\k{a} dziur\k{e} otacza matematycznie zdefiniowana powierzchnia nazywana horyzontem zdarze\'{n}, kt\'{o}ra wyznacza granic\k{e} bez powrotu. Nazywa si\k{e} j\k{a} ,,czarn\k{a}\textquotedblright{}, poniewa\.{z} poch\l{}ania ca\l{}kowicie \'{s}wiat\l{}o trafiaj\k{a}ce w horyzont, nie odbijaj\k{a}c niczego, zupe\l{}nie jak cia\l{}o doskonale czarne w termodynamice\footnote[2]{P.C.W. Davies. Thermodynamics of Black Holes. ,,Reports on Progress in Physics\textquotedblright{}. 41 (8), s. 1313\textendash{}1355, 1978. DOI: 10.1088/0034-4885/41/8/004}. Mechanika kwantowa przewiduje, \.{z}e czarne dziury emituj\k{a} promieniowanie jak cia\l{}o doskonale czarne o niezerowej temperaturze. Temperatura ta jest odwrotnie proporcjonalna do masy czarnej dziury, co sprawia, \.{z}e bardzo trudno je zaobserwowa\'{c} w wypadku czarnych dziur o masie gwiazdowej b\k{a}d\'{z} wi\k{e}kszych\cite{theory}.
 
 \begin{figure}[ht]
 \begin{center}
 \includegraphics[scale=0.5]{bh2.eps}
-\caption{Obraz obiektu M87}
+\caption{Symulowany widok czarnej dziury}
+\label{rys_model_bh}
 \end{center}
 \end{figure}
 
@@ -25,15 +27,17 @@
 \newpage
 \section{Historia}
 \subsection{Pocz\k{a}tek}
-Ide\k{e}, \.{z}e mo\.{z}e istnie\'{c} tak masywne cia\l{}o, i\.{z} nawet \'{s}wiat\l{}o nie mo\.{z}e z niego uciec, postulowa\l{} angielski geolog John Michell w roku 1783 w pracy przes\l{}anej do Royal Society. W tym czasie istnia\l{}a teoria grawitacji Isaaca Newtona i poj\k{e}cie pr\k{e}dko\'{s}ci ucieczki. Michell rozwa\.{z}a\l{}, i\.{z} w kosmosie mo\.{z}e istnie\'{c} wiele tego typu obiekt\'{o}w.
+Ide\k{e}, \.{z}e mo\.{z}e istnie\'{c} tak masywne cia\l{}o, i\.{z} nawet \'{s}wiat\l{}o nie mo\.{z}e z niego uciec, postulowa\l{} angielski geolog John Michell w roku 1783 w pracy przes\l{}anej do Royal Society. W tym czasie istnia\l{}a teoria grawitacji Isaaca Newtona i poj\k{e}cie pr\k{e}dko\'{s}ci ucieczki. Michell rozwa\.{z}a\l{}, i\.{z} w kosmosie mo\.{z}e istnie\'{c} wiele tego typu obiekt\'{o}w\footnote[3]{Hawking 2003, s. 37.}.
 
-W roku 1796 francuski matematyk Pierre Simon de Laplace propagowa\l{} t\k{e} sam\k{a} ide\k{e} w swojej ksi\k{a}\.{z}ce Exposition du Systeme du Monde (niestety znikn\k{e}\l{}a w p\'{o}\'{z}niejszych wydaniach).
+W roku 1796 francuski matematyk Pierre Simon de Laplace propagowa\l{} t\k{e} sam\k{a} ide\k{e} w swojej ksi\k{a}\.{z}ce Exposition du Systeme du Monde (niestety znikn\k{e}\l{}a w p\'{o}\'{z}niejszych wydaniach\footnote[4]{Hawking 2003, s. 38.}).
 \subsection{Wiek XX}
 Ta idea nie cieszy\l{}a si\k{e} du\.{z}ym zainteresowaniem w XIX wieku, poniewa\.{z} \'{s}wiat\l{}o uwa\.{z}ano za bezmasow\k{a} fal\k{e} niepodlegaj\k{a}c\k{a} grawitacji. Nied\l{}ugo po opublikowaniu w roku 1905 szczeg\'{o}lnej teorii wzgl\k{e}dno\'{s}ci, Einstein zacz\k{a}\l{} rozwa\.{z}a\'{c} wp\l{}yw grawitacji na \'{s}wiat\l{}o.
 
-Najpierw pokaza\l{}, \.{z}e grawitacja oddzia\l{}uje na propagacj\k{e} fal \newline elektromagnetycznych, a w roku 1915 sformu\l{}owa\l{} og\'{o}ln\k{a} teori\k{e} wzgl\k{e}dno\'{s}ci. Kilka miesi\k{e}cy p\'{o}\'{z}niej, Karl Schwarzschild znalaz\l{} rozwi\k{a}zanie r\'{o}wna\'{n} tej teorii opisuj\k{a}cych obiekt maj\k{a}cy posta\'{c} masy skupionej w jednym punkcie, kt\'{o}ry bardzo silnie odkszta\l{}ca czasoprzestrze\'{n}. Jednym z parametr\'{o}w \newline rozwi\k{a}zania by\l{} promie\'{n} Schwarzschilda. Sam Schwarzschild uwa\.{z}a\l{} go za niefizyczny. W roku 1931 Chandrasekhar na przyk\l{}adzie bia\l{}ego kar\l{}a pokaza\l{}, \.{z}e powy\.{z}ej pewnej granicznej masy nic nie jest w stanie powstrzyma\'{c} kolapsu gwiazdy. Przeciwny takim wnioskom by\l{} Arthur Eddington, kt\'{o}ry wierzy\l{}, i\.{z} powinna istnie\'{c} fizyczna przyczyna, kt\'{o}ra zatrzyma kolaps gwiazdy.
+Najpierw pokaza\l{}, \.{z}e grawitacja oddzia\l{}uje na propagacj\k{e} fal \newline elektromagnetycznych, a w roku 1915 sformu\l{}owa\l{} og\'{o}ln\k{a} teori\k{e} wzgl\k{e}dno\'{s}ci. Kilka miesi\k{e}cy p\'{o}\'{z}niej, Karl Schwarzschild znalaz\l{} rozwi\k{a}zanie r\'{o}wna\'{n} tej teorii opisuj\k{a}cych obiekt maj\k{a}cy posta\'{c} masy skupionej w jednym punkcie, kt\'{o}ry bardzo silnie odkszta\l{}ca czasoprzestrze\'{n}. W roku 1931 Chandrasekhar na przyk\l{}adzie bia\l{}ego kar\l{}a pokaza\l{}, \.{z}e powy\.{z}ej pewnej granicznej masy nic nie jest w stanie powstrzyma\'{c} kolapsu gwiazdy.
 \subsection{Wsp\'{o}\l{}czesno\'{s}\'{c}}
 W 1939 roku Robert Oppenheimer i Hartland Snyder pokazali, \.{z}e masywna gwiazda mo\.{z}e ulec kolapsowi grawitacyjnemu. Taki obiekt nazwano ,,zamro\.{z}on\k{a} gwiazd\k{a}\textquotedblright{}, poniewa\.{z} dla dalekiego obserwatora kolaps b\k{e}dzie zwalnia\l{}. Idea ta nie wywo\l{}a\l{}a du\.{z}ego zainteresowania a\.{z} do lat 60. Zainteresowanie ni\k{a} wzros\l{}o z chwil\k{a} odkrycia pulsar\'{o}w w 1967 roku. Tu\.{z} po tym w 1969 John Wheeler zaproponowa\l{} nazw\k{e} ,,czarna dziura\textquotedblright{}.
+
+
 \newpage
 \section{Opis matematyczny}
 Poniewa\.{z} zakrzywienie czasoprzestrzeni jest odczuwane jako si\l{}a grawitacji, czasem m\'{o}wi si\k{e} potocznie, \.{z}e czarn\k{a} dziur\k{e} stanowi materia \'{s}ci\'{s}ni\k{e}ta tak, \.{z}e si\l{}a grawitacji, z jak\k{a} oddzia\l{}uje ona na sam\k{a} siebie, nie mo\.{z}e by\'{c} zr\'{o}wnowa\.{z}ona przez si\l{}y wewn\k{e}trzne (ci\'{s}nienie). Jest to uproszczenie o tyle, \.{z}e w my\'{s}l r\'{o}wna\'{n} Einsteina ci\'{s}nienie daje wk\l{}ad wsp\'{o}\l{}dzia\l{}aj\k{a}cy z si\l{}\k{a} grawitacji (czyli wzrost ci\'{s}nienia przyspiesza, a nie spowalnia powstanie czarnej dziury).
@@ -41,8 +45,8 @@ Poniewa\.{z} zakrzywienie czasoprzestrzeni jest odczuwane jako si\l{}a grawitacj
 Istnienie czarnych dziur wynika z r\'{o}wnania Einsteina Og\'{o}lnej Teorii Wzgl\k{e}dno\'{s}ci, cho\'{c} w historii fizyki ju\.{z} wcze\'{s}niej pojawi\l{}a si\k{e} hipotetyczna idea masy tak wielkiej, \.{z}e nawet \'{s}wiat\l{}o nie mog\l{}oby si\k{e} od niej oddali\'{c}. R\'{o}wnania Og\'{o}lnej Teorii Wzgl\k{e}dno\'{s}ci (OTW), z kt\'{o}rych wynika istnienie czarnych dziur, maj\k{a} posta\'{c}:
 
 \begin{equation*}
-R_{\mu \nu} - {1 \over 2}g_{\mu \nu}\,R + g_{\mu \nu} \Lambda = 
- {8 \pi G \over c^4} T_{\mu \nu}
+R_{\mu \nu} - \frac{1}{2} g_{\mu \nu}\,R + g_{\mu \nu} \Lambda = 
+ \frac{8 \pi G}{c^4} T_{\mu \nu}
 \end{equation*}
 gdzie:
 \begin{description}
@@ -62,9 +66,9 @@ ds^2 = e^{\nu(r)} dt^2 - e^{\lambda(r)} dr^2 - r^2 d\Omega^2 = \left(1 - \frac{2
 \newpage
 
 \section{W\l{}a\'{s}ciwo\'{s}ci czarnej dziury}
-Istniej\k{a} teorie, wed\l{}ug kt\'{o}rych przej\'{s}cie obiektu przez horyzont zdarze\'{n} zwi\k{a}zane jest z ca\l{}kowitym znikni\k{e}ciem zawartej w tym obiekcie informacji.
+Istniej\k{a} teorie, wed\l{}ug kt\'{o}rych przej\'{s}cie obiektu przez horyzont zdarze\'{n} zwi\k{a}zane jest z ca\l{}kowitym znikni\k{e}ciem zawartej w tym obiekcie informacji\cite{astrof}.
 
-Z matematycznego punktu widzenia fakt ten sprowadza si\k{e} do stwierdzenia, \.{z}e do opisu czarnej dziury wystarczy poda\'{c} jej mas\k{e}, \l{}adunek oraz moment p\k{e}du. Dla poszczeg\'{o}lnych kombinacji tych trzech warto\'{s}ci sformu\l{}owano nast\k{e}puj\k{a}ce rozwi\k{a}zania r\'{o}wna\'{n} opisuj\k{a}cych czarn\k{a} dziur\k{e}:
+Z matematycznego punktu widzenia fakt ten sprowadza si\k{e} do stwierdzenia, \.{z}e do opisu czarnej dziury wystarczy poda\'{c} jej mas\k{e}, \l{}adunek oraz moment p\k{e}du\cite{relativ}. Dla poszczeg\'{o}lnych kombinacji tych trzech warto\'{s}ci sformu\l{}owano nast\k{e}puj\k{a}ce rozwi\k{a}zania r\'{o}wna\'{n} opisuj\k{a}cych czarn\k{a} dziur\k{e}:
  
 \begin{enumerate}
 	\item Schwarzschilda \textendash{} tylko masa niezerowa,
@@ -96,11 +100,30 @@ Micro black hole & up to $M_{moon}$ & up to $0.1$ mm \\
 \end{center}
 \end{table}
 \newpage
+\section{Pierwszy obraz czarnej dziury}
+
+\begin{figure}[ht]
+\begin{center}
+\includegraphics[scale=0.3]{bh1.eps}
+\caption{Obraz obiektu M87}
+\label{obraz_M87}
+\end{center}
+\end{figure}
+\noindent
+10 kwietnia 2019 naukowcy z programu EHT opublikowali pierwszy w historii obraz czarnej dziury, znajduj\k{a}cej si\k{e} w centrum galaktyki M87.
+\newpage
 \begin{center}
 \section{Spis tre\'{s}ci}
 \end{center}
 \tableofcontents
 \listoftables
 \listoffigures
+
+\newpage
+
+\bibliography{bibl}
+\bibliographystyle{plain}
+
+
 
 \end{document}
